# cpp-fetch-declare

./: .gitignore  CMakeLists.txt  test-lib.cpp  test-lib.h
